# MonetDB

./: .bumpversion.cfg  .clang-format  .editorconfig  .hgeol  .hgignore  .hgtags  .indent.pro  .readthedocs.yml  3  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  ChangeLog  ChangeLog-Archive  ChangeLog.Apr2019  ChangeLog.Aug2011  ChangeLog.Aug2018  ChangeLog.Aug2024  ChangeLog.Dec2016  ChangeLog.Dec2023  ChangeLog.Dec2025  ChangeLog.Jan2022  ChangeLog.Jul2021  ChangeLog.Jun2016  ChangeLog.Jun2020  ChangeLog.Jun2023  ChangeLog.Mar2018  ChangeLog.Mar2025  ChangeLog.Oct2020  ChangeLog.sqlextra  ChangeLog.strimps-updates  ChangeLog.userstats  Config.cmake.in  HOWTO.txt  HowToStart.rst  Makefile.ag  MonetDB.spec  README  README-Debian  README-Fedora  (+23 more)
MonetDB/: .cvsignore  .monet.conf  COPYING  ChangeLog  ChangeLog-Archive  ChangeLog.Feb2010  ChangeLog.Jun2010  Credits  EmbeddedMonet.html  FAQ  HowToStart  HowToStart-MinGW-pcre.txt  HowToStart-MinGW-swig.txt  HowToStart-MinGW.txt  HowToStart-Win32  HowToStart-Win32.txt  HowToStart.css  HowToStart.html  HowToStart.rst  Makefile.ag  Makefile.am  MonetDB.pc.in  MonetDB.spec  MonetDB.spec.in  README  RunMapiClient.bat.in  RunMapprove.bat.in  RunMapprove.in  RunMserver.bat.in  RunMserver.in  RunMtest.bat.in  RunMtest.in  VERSION  acconfig.h  aclocal.m4  bootstrap  configure  configure.ag  configure.in  de-bootstrap  (+12 more)
MonetDB/NT/: .cvsignore  Makefile  MapiClient.bat  MapiServer.bat  MonetDB.dsw  MonetDB.iss  Mserver.bat  Mx.dsp  MxLib.dsp  config.dsp  configure.py  epsffit.dsp  getopt.c  idxmx.dsp  license.rtf  monetdb_config.h.in  monetdb_winconfig.h  prefixMxFile.dsp  rules.msc  website.html  winconfig.h  winlibc.h  winrules.msc
MonetDB/conf/: .cvsignore  Makefile.ag  Makefile.am  Makefile.in  MonetDB.conf.in  MonetDB.m4  acinclude.m4  bootstrap  conf-aix  conf-apps  conf-linux  conf-medusa  conf.bash  conf.csh  config.guess  config.h.in  config.sub.1.4  configure.py  depcomp  ltconfig  ltconfig.1.4  ltmain.sh  missing  monet.conf.in  monet.m4  monetdb-config.bat.in  monetdb-config.in  rules.mk  (+1 more)
buildtools/: .cvsignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog-Archive  ChangeLog.Apr2011  ChangeLog.Apr2012  ChangeLog.Apr2019  ChangeLog.Aug2011  ChangeLog.Aug2018  ChangeLog.Dec2011  ChangeLog.Dec2016  ChangeLog.Feb2010  ChangeLog.Jan2014  ChangeLog.Jul2012  ChangeLog.Jul2017  ChangeLog.Jun2010  ChangeLog.Jun2012  ChangeLog.Jun2016  ChangeLog.Mar2018  ChangeLog.Nov2009  ChangeLog.Oct2010  ChangeLog.Oct2012  ChangeLog.Oct2014  HowToRelease.rst  Makefile.ag  Makefile.am  Makefile.in  Makefile.msc  README  bootstrap  configure.ac  configure.bs  coverity_model.c  de-bootstrap  dummy.h.in  vertoo.config  vertoo.data
clients/: CMakeLists.txt  ChangeLog  ChangeLog-Archive  ChangeLog.Apr2011  ChangeLog.Apr2012  ChangeLog.Aug2011  ChangeLog.Aug2018  ChangeLog.Dec2011  ChangeLog.Dec2016  ChangeLog.Dec2023  ChangeLog.Feb2010  ChangeLog.Feb2013  ChangeLog.Jan2014  ChangeLog.Jan2022  ChangeLog.Jul2012  ChangeLog.Jul2015  ChangeLog.Jul2021  ChangeLog.Jun2010  ChangeLog.Jun2016  ChangeLog.Jun2020  ChangeLog.Jun2023  ChangeLog.Mar2011  ChangeLog.Mar2018  ChangeLog.Mar2025  ChangeLog.Nov2009  ChangeLog.Oct2010  ChangeLog.Oct2012  ChangeLog.Oct2014  ChangeLog.Sep2022  Makefile.ag  MonetDB-client.spec  MonetDB-client.spec.in  RunMapiClient.bat.in  RunMapprove.bat.in  RunMapprove.in  RunMtest.bat.in  RunMtest.in  Runmclient.bat.in  bootstrap  clients_config.h.in  (+5 more)
ctest/: CMakeLists.txt
gdk/: .editorconfig  CMakeLists.txt  ChangeLog  ChangeLog-Archive  ChangeLog.Apr2011  ChangeLog.Apr2012  ChangeLog.Apr2019  ChangeLog.Aug2011  ChangeLog.Aug2018  ChangeLog.Aug2024  ChangeLog.Dec2011  ChangeLog.Dec2016  ChangeLog.Dec2023  ChangeLog.Feb2013  ChangeLog.Jan2022  ChangeLog.Jul2012  ChangeLog.Jul2015  ChangeLog.Jul2017  ChangeLog.Jul2021  ChangeLog.Jun2012  ChangeLog.Jun2016  ChangeLog.Jun2020  ChangeLog.Jun2023  ChangeLog.Mar2011  ChangeLog.Mar2018  ChangeLog.Mar2025  ChangeLog.Nov2019  ChangeLog.Oct2012  ChangeLog.Oct2014  ChangeLog.Oct2020  ChangeLog.Sep2022  Makefile.ag  bat.feps  bat1.feps  gdk.bib  gdk.h  gdk.mx  gdk_aggr.c  gdk_align.c  gdk_align.mx  (+148 more)
pathfinder/: .cvsignore  AUTHORS  COPYING  ChangeLog  ChangeLog-Archive  ChangeLog.Feb2010  ChangeLog.Jun2010  Credits  EXTENSIONS  HowSoapRpcWorks  HowToStart-MinGW.txt  HowToStart-PF  INSTALL  KnownIssues  Makefile.ag  Makefile.am  MonetDB-PF.spec.in  MonetDB-XQuery.spec  MonetDB-XQuery.spec.in  README  RunMapprove.bat.in  RunMapprove.in  RunMserver.bat.in  RunMserver.in  RunMtest.bat.in  RunMtest.in  SOAP-RPC_usage_and_implementation  VERSION  autogen  bootstrap  configure.ag  configure.in  de-bootstrap  extra.mk  extra.mk.in  license.txt  rpm.mk.in  rules.mk  vertoo.config  vertoo.data
sql/: .cvsignore  CMakeLists.txt  ChangeLog  ChangeLog-Archive  ChangeLog.Apr2011  ChangeLog.Apr2012  ChangeLog.Apr2019  ChangeLog.Aug2011  ChangeLog.Aug2018  ChangeLog.Aug2024  ChangeLog.Dec2011  ChangeLog.Dec2016  ChangeLog.Dec2023  ChangeLog.Dec2025  ChangeLog.Feb2010  ChangeLog.Feb2013  ChangeLog.Jan2022  ChangeLog.Jul2012  ChangeLog.Jul2015  ChangeLog.Jul2021  ChangeLog.Jun2010  ChangeLog.Jun2020  ChangeLog.Jun2023  ChangeLog.Mar2011  ChangeLog.Mar2018  ChangeLog.Mar2025  ChangeLog.Nov2019  ChangeLog.Oct2010  ChangeLog.Oct2012  ChangeLog.Oct2014  ChangeLog.Oct2020  ChangeLog.Sep2022  ChangeLog.copyintobinary  ChangeLog.linear-hashing  ChangeLog.odbc_loader  ChangeLog.scoping2  Changelog.Feb2013  FAQ  HowToStart  HowToStart-SQL  (+43 more)
testing/: CMakeLists.txt  ChangeLog  ChangeLog-Archive  ChangeLog.Aug2018  ChangeLog.Feb2013  ChangeLog.Jun2010  ChangeLog.Sep2022  Makefile.ag  Mconvert.py.in  Mdiff.c  Mfilter.py  Mfilter.py.in  MkillUsers.in  Mlog.bat  Mlog.in  MonetDB-testing.spec  MonetDB-testing.spec.in  Msquash.py.in  Mtest.py.bat  Mtest.py.in  Mtimeout.c  Mz.py.bat  Mz.py.in  README  SQLogicConvertNotes  cmptests.py  configure.ag  configure.in  convert_to_sqllogic.sh  difflib.c  difflib.h  explain.py  exportutils.py  fallocate.c  floatutil.py  hashstableout.py  helpers.c  helpers.h  helpers.py  listexports.py  (+27 more)
(+45859 files in other folders)
