dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/utils/Mx/Mx.h)
AC_CONFIG_AUX_DIR(conf)

dnl ----------------------
AM_INIT_AUTOMAKE("Monet", 4.2)
AM_CONFIG_HEADER(config.h:conf/config.h.in)
AC_CANONICAL_HOST

HOST=[$host]
AC_DEFINE_UNQUOTED(HOST, "$HOST", [Host identifier])

dnl we use LEXLIB=-ll because this is usually correctly installed 
dnl and -lfl usually only in the 32bit version
dnl some dirty hacks
thread_safe_flag_spec="-D_REENTRANT"
[ case "$host_os" in
  solaris*)
    case "$CXX" in
      CC*) 
	echo "$CXX=CC"
        LDFLAGS="$LDFLAGS -z muldefs"
        thread_safe_flag_spec="-mt" ;;
      *) ;;
    esac
    LEXLIB=-ll
    ;;
  irix*)
    case "$CC" in
      *-32|*"-32 ") libsuff="";;
      "cc -32"|*-n32|*"-n32 ") libsuff=n32;;
      "cc -64"|*-64|*"-64 ") libsuff=64;;
      *) libsuff=n32;;
    esac
    LEXLIB=-ll
    ;;
  aix*)
    thread_safe_flag_spec="-D_THREAD_SAFE $thread_safe_flag_spec"
    ;;
esac ]

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_YACC
AC_DISABLE_STATIC
AC_ENABLE_SHARED
AM_PROG_LIBTOOL
dnl AC_PROG_CC_STDC

AC_PROG_LN_S
AC_CHECK_PROG(RM,rm,rm -f)
AC_CHECK_PROG(MV,mv,mv -f)
AC_PATH_PROG(BASH,bash, /usr/bin/bash, $PATH:/bin:/usr/bin:/usr/local/bin)

dnl to shut up automake (.m files are used for mel not for objc)
AC_CHECK_TOOL(OBJC,objc)

#AM_DEPENDENCIES(CC)
#AM_DEPENDENCIES(CXX)

dnl AC_CHECK_PROG(CP,cp,cp -f)
dnl AC_CHECK_PROG(MKDIR,mkdir,mkdir -p)
dnl AC_CHECK_PROG(TAGS,ctags,ctags)

dnl systems checks
AC_AIX


dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h getopt.h malloc.h pwd.h dlfcn.h)
AC_CHECK_HEADERS(time.h sys/time.h sys/utime.h)
AC_CHECK_HEADERS(sys/file.h sys/param.h sys/times.h sys/mman.h sys/signal.h)
AC_CHECK_HEADERS(rlimit.h netdb.h sys/resource.h)

dnl libpthread
have_pthread=auto
PTHREAD_LIBS=""
PTHREAD_INCS=""
AC_ARG_WITH(pthread,
[  --with-pthread=DIR     pthread library is installed in DIR], 
	[have_pthread="$withval"])
if test "x$have_pthread" != xno; then
  if test "x$have_pthread" != xauto; then
    PTHREAD_LIBS="-L$withval/lib"
    PTHREAD_INCS="-I$withval/include"
  fi

  save_CFLAGS="$CFLAGS"
  CFLAGS="$CFLAGS $PTHREAD_INCS"
  AC_CHECK_HEADERS(pthread.h semaphore.h) 
  CFLAGS="$save_CFLAGS"

  save_LIBS="$LIBS"
  LIBS="$LIBS $PTHREAD_LIBS"
  AC_CHECK_LIB(pthread, sem_init, 
	[ PTHREAD_LIBS="$PTHREAD_LIBS -lpthread" 
          AC_DEFINE(HAVE_LIBPTHREAD) 
	  have_pthread=yes ] , 
	dnl sun
	[ AC_CHECK_LIB(pthread, sem_post, 
		[ PTHREAD_LIBS="$PTHREAD_LIBS -lpthread -lposix4" 
          	AC_DEFINE(HAVE_LIBPTHREAD) 
	  	have_pthread=yes ] , [ have_pthread=no], "-lposix4" )
	] )
  LIBS="$save_LIBS"

  if test "x$have_pthread" != xyes; then
    PTHREAD_LIBS=""
    PTHREAD_INCS=""
  fi
fi
AC_SUBST(PTHREAD_LIBS)
AC_SUBST(PTHREAD_INCS)

dnl libreadline
have_readline=auto
READLINE_LIBS=""
AC_ARG_WITH(readline,
[  --with-readline=DIR     readline library is installed in DIR], 
	[have_readline="$withval"])
if test "x$have_readline" != xno; then
  if test "x$have_readline" != xauto; then
    READLINE_LIBS="-L$withval/lib"
  fi

  save_LIBS="$LIBS"
  LIBS="$LIBS $READLINE_LIBS"
  AC_CHECK_LIB(readline$libsuff, readline, 
	[ READLINE_LIBS="$READLINE_LIBS -lreadline$libsuff -ltermcap" 
          AC_DEFINE(HAVE_LIBREADLINE) 
	  have_readline=yes ]
	, have_readline=no, "-ltermcap" )
  LIBS="$save_LIBS"

  if test "x$have_readline" != xyes; then
    READLINE_LIBS=""
  fi
fi
AC_SUBST(READLINE_LIBS)

DL_LIBS=""
AC_CHECK_LIB(dl, dlopen, [ DL_LIBS="-ldl" ] )
AC_SUBST(DL_LIBS)

MALLOC_LIBS=""
AC_CHECK_LIB(malloc, malloc, [ MALLOC_LIBS="-lmalloc" ] )
AC_SUBST(MALLOC_LIBS)

SOCKET_LIBS=""
AC_CHECK_LIB(socket, socket, [ SOCKET_LIBS="-lsocket -lnsl" ], [], "-lnsl" )
AC_SUBST(SOCKET_LIBS)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_STAT
AC_HEADER_TIME
AC_STRUCT_TM
AC_STRUCT_TIMEZONE
AC_LANG_CPLUSPLUS
AC_TRY_COMPILE( [], [ bool x = true; ], [ AC_DEFINE(HAVE_BOOL) ] )
AC_LANG_C
AC_C_BIGENDIAN
AC_TRY_COMPILE( [], [ long long x; ], [ AC_DEFINE(HAVE_LONGLONG)]  )
AC_CHECK_SIZEOF(char,1)
AC_CHECK_SIZEOF(short,2)
AC_CHECK_SIZEOF(int,4)
AC_CHECK_SIZEOF(long,4)
AC_CHECK_SIZEOF(long long,8)

dnl only win32 AC_TRY_COMPILE( [], [ __int64 x; ], [ AC_DEFINE(HAVE__INT64)] )

dnl Checks for library functions.
AC_FUNC_ALLOCA 
AC_FUNC_MMAP
AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_FUNC_MEMCMP 
AC_CHECK_FUNCS(mkdir rmdir getcwd getopt rlimit)
AC_CHECK_FUNCS(strcspn strdup strstr strtod strtol strerror )
AC_CHECK_FUNCS(gethostname gettimeofday setenv putenv select getpgid)

AC_CHECK_FUNCS(ctime_r)
ctime_r3=yes
AC_MSG_CHECKING(ctime_r3)
AC_TRY_COMPILE( [#include <time.h> ], 
[ char buf[26]; time_t t; ctime_r(&t,buf,26); ], 
[ AC_DEFINE(HAVE_CTIME_R3) ], [ ctime_r3=no ])
AC_MSG_RESULT($ctime_r3)


AC_SUBST(thread_safe_flag_spec)
AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)

AC_OUTPUT(src/Makefile
src/utils/Makefile src/utils/Mx/Makefile 
src/utils/rewrite/Makefile src/utils/testing/Makefile 
src/mil/Makefile src/mel/Makefile src/mal/Makefile
src/gdk/Makefile src/monet/Makefile
src/modules/Makefile 
src/modules/plain/Makefile
src/tools/Makefile
conf/Makefile
doc/Makefile
scripts/Makefile
tests/Makefile
Makefile
src/utils/testing/Mlog
src/utils/testing/Mfilter
src/utils/testing/Mtest
src/utils/testing/MkillUsers
)
